# Udacity-Projects

./: .gitignore
AI/ML-For-Trading/Code/: snippets.py
AI/ML-For-Trading/Code/Regression/: regression-algorithms.py
AI/ML-For-Trading/Code/Stat-Analysis/: stat-analysis-of-ts.py
AI/TradingWithAI/code/: momentum_trading.py  project2_Breakout_Strategy.py
BlockchainDeveloper/: BlockchainDev_Udacity.aux  BlockchainDev_Udacity.snm  BlockchainDev_Udacity.tex  DeploymentData.rtf  Untitled.aux  defs-beamer.tex
BlockchainDeveloper/code/: loan_project.sol
C++/: section2.cpp
C++/Code/: section3.cpp
ML-For-Trading/Code/Regression/: regression-algorithms.py
Programming_Languages/C++/Code/: section2.cpp
Programming_Languages/C++/Code/Abstraction/: Sphere-Class.cpp
Programming_Languages/C++/Code/Advanced_OOP/: Animal-Class.cpp  Class-Hierarchy.cpp  Composition.cpp  Friend-Class.cpp  Vehicle-Class.cpp
Programming_Languages/C++/Code/GenericProgramming/: Class-Mapping.cpp  Comparison-Operators.cpp  Deduction.cpp  First-Generic-Function.cpp
Programming_Languages/C++/Code/OOP/: Bank_Account_Class.cpp  Car-Class.cpp  Date_Encapsulation.cpp  Pyramide.cpp  Student-Class.cpp
Programming_Languages/C++/Code/Polymorphism/: Class-Aninmal.cpp  Class-Vehicle-Motion-Model.cpp  Human.cpp  (+2 more)
TradingWithAI/code/workspace/: .workspace-submit.json
rust/: read.txt
rust/projects/guessing_game/: Cargo.toml
rust/projects/hello_world/: main  main.rs
rust/projects/ramanujan/: Cargo.toml
rust/projects/ramanujan/src/: main.rs
rust/projects/ramanujan/src/magma/: ramanujan.m
(+8 files in other folders)
